# agentmarket_cli

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md
.github/workflows/: ci.yml  release.yml
contracts/script/: Deploy.s.sol
contracts/src/: RequestRegistry.sol
contracts/test/: MockUSDC.sol  RequestRegistry.t.sol
docs/: AgentMarket_CLI_Technical_Spec.md  AgentMarket_Whitepaper_v3.md  PRD.md
src/: lib.rs  main.rs
src/chain/: client.rs  contracts.rs  mod.rs  signer.rs  types.rs
src/commands/: claim.rs  daemon.rs  fund.rs  init.rs  mod.rs  register.rs  request.rs  respond.rs  search.rs  status.rs  validate.rs  withdraw.rs
src/config/: keystore.rs  store.rs
src/engine/: handlers.rs  identity.rs  manual_handler.rs  mod.rs  reputation.rs  requests.rs  validation.rs
src/ipfs/: client.rs  encryption.rs  mailbox.rs  mod.rs  pin.rs
src/output/: formatter.rs
tests/: e2e_anvil.rs  phase1_integration.rs  phase2_integration.rs  phase3_integration.rs  phase4_integration.rs
